# SuperVINS

./: .gitignore  README.md  download_data.sh  duration.txt  index.html
SuperVINS/: style.css
camera_models/: CMakeLists.txt
camera_models/src/calib/: CameraCalibration.cc
config/: supervins_rviz_config.rviz
config/euroc/: euroc_mono_imu_config.yaml  euroc_stereo_config.yaml  euroc_stereo_imu_config.yaml  umavi_cam2_mono_imu_config.yaml
docker/: Dockerfile
supervins_estimator/: CMakeLists.txt  package.xml
supervins_estimator/launch/: supervins_rviz.launch
supervins_estimator/src/: KITTIGPSTest.cpp  KITTIOdomTest.cpp  rosNodeTest.cpp  supervins_main.cpp
supervins_estimator/src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  parameters.cpp  parameters.h
supervins_estimator/src/factor/: integration_base.h
supervins_estimator/src/featureTracker/: extractor_matcher_dpl.cpp  extractor_matcher_dpl.h  feature_tracker.cpp  feature_tracker.h  feature_tracker_dpl.cpp  feature_tracker_dpl.h  transform_dpl.cpp  transform_dpl.h
supervins_estimator/src/featureTracker/ort_include/: Config.h  Configuration.h  onnxruntime_training_c_api.h  onnxruntime_training_cxx_api.h  onnxruntime_training_cxx_inline.h  viz2d.h
supervins_estimator/src/initial/: initial_aligment.cpp  initial_sfm.cpp  solve_5pts.cpp
supervins_estimator/src/utility/: utility.cpp  visualization.cpp  visualization.h
supervins_estimator/vio_output/: extrinsic_parameter.csv  loop_corrected_tum.txt  vio.csv  vio_loop.csv
supervins_loop_fusion/: CMakeLists.txt  package.xml
supervins_loop_fusion/src/: keyframe.cpp  keyframe.h  matcher_dpl.cpp  matcher_dpl.h  parameters.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp  transform_dpl.cpp  transform_dpl.h
supervins_loop_fusion/src/utility/: CameraPoseVisualization.cpp
time_consumption/: backend_optimization.txt  feature_extraction_matching.txt  loop_frame_detection.txt
